<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTxt_bwrName"
        android:importantForAutofill="no"
        android:inputType="text"
        app:backgroundTint="@android:color/holo_blue_bright" />

    <EditText
        android:id="@+id/edit_text_loan_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTxt_item"
        android:importantForAutofill="no"
        android:inputType="text"
        app:backgroundTint="@android:color/holo_blue_bright" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:padding="10dp">

        <Button
            android:id="@+id/button_save"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="@string/save"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_add"
            app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_add"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="@string/add_loan"
            app:layout_constraintEnd_toStartOf="@+id/button_reset"
            app:layout_constraintStart_toEndOf="@+id/button_save"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_reset"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="@string/button_reset"
            app:layout_constraintEnd_toStartOf="@+id/button_remove"
            app:layout_constraintStart_toEndOf="@+id/button_add"
            app:layout_constraintTop_toTopOf="@+id/button_add" />

        <Button
            android:id="@+id/button_remove"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="@string/button_remove"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_reset" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_loan_data"
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:layout_marginBottom="100dp"
        android:background="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</LinearLayout>